--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
 					</div>
 
 					<h3>PLAYER1</h3>
-					<p style="font-size: 70px">0</p>
+					<p style="font-size: 70px" id="player1_score">0</p>
 					<div class="current_score1">
 						<h4>CURRENT</h4>
-						<p>0</p>
+						<p id="1">0</p>
 					</div>
 				</div>
 
 				<div class="player2">
 					<h3>PLAYER2</h3>
-					<p style="font-size: 70px">0</p>
+					<p style="font-size: 70px" id="player2_score">0</p>
 					<div class="current_score2">
 						<h4>CURRENT</h4>
-						<p>0</p>
+						<p id="2">0</p>
 					</div>
 				</div>
 			</div>
